prevent highlighting on mobile taps

--- a/src/card-list/card-list.component.css
+++ b/src/card-list/card-list.component.css
@@ -35,4 +35,6 @@ a:active {
     color: inherit;
     text-decoration: inherit;
     font-weight: inherit;
+    user-select: none;
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
