--- a/src/pills/pills.component.css
+++ b/src/pills/pills.component.css
@@ -17,6 +17,8 @@
     color: var(--text-light);
     cursor: pointer;
     font-size: 12px;
+    user-select: none;
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
 .pills-bar .btn:hover {
