--- a/src/tabs/tabs.component.css
+++ b/src/tabs/tabs.component.css
@@ -19,6 +19,8 @@
     color: var(--text-light);
     cursor: pointer;
     font-size: 12px;
+    user-select: none;
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
 .tabs-bar .btn:hover {
